--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="form-group">
                     <label for="yearsToPension"></label>Number of years to retirement:</label>
-                    <input id="yearsToPension" type="text" class="form-control" value="10"> years
+                    <input id="yearsToPension" type="text" class="form-control" value="10">
                 </div>
             
                 <div class="form-group">
