--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     Future value for your pension: <span id="result">?</span> USD
                 </h5>
                 <p>
-                    The basic advice with pensions is to put in is as much as possible, as early as possible.
+                    The basic advice with pensions is to put in as much as possible, as early as possible.
                 </p>
             </div>
         </div>
