--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             
                 <div class="form-group">
                     <button id="calculatePension" onclick="calculatePension()" class="btn btn-primary">Calculate pension</button>  
+                    
                 </div>
             </div>
 
@@ -52,7 +53,7 @@
                     Future value for your pension: <span id="result">?</span> USD
                 </h5>
                 <p>
-                    The basic advice with pensions is to put in as much as possible, as early as possible.
+                    The basic advice with pensions is to put in it as much as possible, as early as possible.
                 </p>
             </div>
         </div>
