--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <div class="input-group-prepend">
                         <span class="input-group-text">Future value for your pension (USD):</span>
                         </div>
-                        <span id="result" class="form-control" aria-label="result" style="color: black; text-align: right;">?</span>
+                        <span id="result" class="form-control" aria-label="result" style="color: black; text-align: right; background-color: rgba(241, 249, 252);">?</span>
                     </div>
                 
                     
